--- a/Markdown_Notes/package.json
+++ b/Markdown_Notes/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "to-do-list",
+	"name": "markdown-notes",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -50,5 +50,5 @@
 		"gh-pages": "^6.2.0",
 		"json-server": "^0.17.4"
 	},
-	"homepage": "https://AleksandrRDK.github.io.github.io/Markdown_Notes"
+	"homepage": "https://AleksandrRDK.github.io/Markdown_Notes"
 }
