--- a/to-do_list/package.json
+++ b/to-do_list/package.json
@@ -2,6 +2,7 @@
 	"name": "to-do-list",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://AleksandrRDK.github.io/to-do_list",
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.2.5",
 		"@testing-library/jest-dom": "^6.4.5",
@@ -12,6 +13,7 @@
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
 		"react-redux": "^9.1.2",
 		"react-scripts": "^5.0.1",
 		"react-transition-group": "^4.4.5",
@@ -24,7 +26,9 @@
 		"start": "concurrently \"react-scripts start\" \"npx json-server data.json --port 3001\"",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+  		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -43,6 +47,7 @@
 	},
 	"devDependencies": {
 		"classnames": "^2.5.1",
+		"gh-pages": "^6.2.0",
 		"json-server": "^0.17.4"
 	}
 }
