--- a/small_business_dashboard/package.json
+++ b/small_business_dashboard/package.json
@@ -1,6 +1,7 @@
 {
   "name": "small_business_dashboard",
   "version": "0.1.0",
+  "homepage": "https://AleksandrRDK.github.io/small_business_dashboard",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "firebase": "^11.0.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "webpack": "^5.96.1"
